# sofia_whatsapp

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  DEPLOY.md  POLITICA_DE_PRIVACIDADE.md  README.md  TERMO_DE_CONSENTIMENTO.md  pyproject.toml  render.yaml  requirements.txt  sofia_briefing.md  workflow.md
alembic/: env.py
alembic/versions/: 058b58ebedb9_passo_3_tabelas_conversa_mensagem_.py  a0b1c2d3e4f5_reply.py  b2c3d4e5f6a7_arquivamento.py  c3d4e5f6a7b8_stripe_ref.py  c4d5e6f7a8b9_config_negocio.py  d7e8f9a0b1c2_cobranca_resolvida.py  e8f9a0b1c2d3_configuracao_valor_text.py  f3a9c1d2e4b7_frente2_seguimento.py  f9a0b1c2d3e4_midia.py
app/: __init__.py  config.py  database.py  dependencies.py  logging_config.py  main.py  models.py  utils.py
app/prompts/: sofia_v01.txt
app/routers/: __init__.py  api.py  auth.py  health.py  pagamentos.py  painel.py  tasks.py  webhook.py
app/services/: acompanhamento.py  cadastro.py  config_negocio.py  config_prompt.py  conversation.py  escalation.py  hamilton_client.py  llm_client.py  metricas.py  midia.py  pagamentos.py  painel.py  saida.py  seguimento.py  serializacao.py  stripe_client.py  tools.py  transcricao.py  whatsapp_client.py
app/static/: allos.css  manifest.webmanifest  ordenar-tabela.js  style.css  sw.js
app/templates/: _conversas_fragment.html  _mensagens_fragment.html  _topbar.html  base.html  login.html  pagamento_retorno.html  painel_acompanhamento.html  painel_config.html  painel_conversa.html  painel_lista.html  painel_metricas.html  painel_pagamentos.html  (+1 more)
docs/: prompt-claude-code-sofia-v2.md  sofia-base-conhecimento.md
prompt/: contrato-terapeutico-allos.md  sofia-base-conhecimento.md  sofia_v01.txt
scripts/: gerar_icones.py
tests/: __init__.py  test_acompanhamento.py  test_bolhas.py  test_cadastro.py  test_config_negocio.py  test_config_prompt.py  test_conversation.py  test_escalation.py  test_hamilton.py  test_llm.py  test_metricas.py  test_midia.py  test_pagamentos.py  test_painel.py  test_pwa.py  test_saida.py  test_seguimento.py  test_serializacao.py  test_transcricao.py  test_utils.py  test_webhook.py  test_whatsapp_client.py
