[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "sofia"
version = "0.1.0"
description = "Bot de WhatsApp para Allos (clínica-escola de psicologia)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Paulo (Allos)", email = "allosgepeto@gmail.com"}
]

[project.urls]
Repository = "https://github.com/allos/sofia"
Documentation = "https://github.com/allos/sofia/blob/main/README.md"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
# `greenlet` é obrigatório: o SQLAlchemy async executa dentro de greenlets, e sem
# isto o coverage perde esses frames e reporta rotas cobertas como não cobertas
# (o router do painel aparecia com 63% quando a cobertura real é 90%).
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
